ingress-linkerd/concert-order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-v1
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
      version: v1
  template:
    metadata:
      labels:
        app: user
        version: v1
    spec:
      containers:
      - name: user
        image: zhanyang/user:1.0
        ports:
        - containerPort: 8180
        args:
        - "/app/user"
        - "-c"
        - "/etc/user/config.json"
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8180
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: user-config
          mountPath: /etc/user
          readOnly: true
      volumes:
      - name: user-config
        configMap:
          name: user-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-v2
  labels:
    app: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
      version: v2
  template:
    metadata:
      labels:
        app: user
        version: v2
    spec:
      containers:
      - name: user
        image: zhanyang/user:2.0
        ports:
        - containerPort: 8180
        args:
        - "/app/user"
        - "-c"
        - "/etc/user/config.json"
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8180
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: user-config
          mountPath: /etc/user
          readOnly: true
      volumes:
      - name: user-config
        configMap:
          name: user-config
---
apiVersion: v1
kind: Service
metadata:
  name: user
spec:
  selector:
    app: user
  clusterIP: None
  ports:
  - name: http
    port: 8180
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-v1
  labels:
    app: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
      version: v1
  template:
    metadata:
      labels:
        app: booking
        version: v1
    spec:
      containers:
      - name: booking
        image: zhanyang/booking:1.0
        ports:
        - containerPort: 8181
        args:
        - "/app/booking"
        - "-c"
        - "/etc/booking/config.json"
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8181
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: booking-config
          mountPath: /etc/booking
          readOnly: true
      volumes:
      - name: booking-config
        configMap:
          name: booking-config
---
apiVersion: v1
kind: Service
metadata:
  name: booking
spec:
  selector:
    app: booking
  clusterIP: None
  ports:
  - name: http
    port: 8181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concert-v1
  labels:
    app: concert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: concert
      version: v1
  template:
    metadata:
      labels:
        app: concert
        version: v1
    spec:
      containers:
      - name: concert
        image: zhanyang/concert:1.0
        ports:
        - containerPort: 8182
        args:
        - "/app/concert"
        - "-c"
        - "/etc/concert/config.json"
        livenessProbe:
          httpGet:
            path: /healthcheck
            port: 8182
          initialDelaySeconds: 15
          periodSeconds: 20
        volumeMounts:
        - name: concert-config
          mountPath: /etc/concert
          readOnly: true
      volumes:
      - name: concert-config
        configMap:
          name: concert-config
---
apiVersion: v1
kind: Service
metadata:
  name: concert
spec:
  selector:
    app: concert
  clusterIP: None
  ports:
  - name: http
    port: 8182
