ingress-linkerd/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user
  annotations:
    kubernetes.io/ingress.class: "linkerd"
spec:
  rules:
  - host: user.example.com
    http:
      paths:
      - backend:
          serviceName: user
          servicePort: http
